force-app/main/default/objects/JBCXM__UIViews__c/JBCXM__UIViews__c.object-meta.xml
<CustomObject>
    <label>UI Views</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>