force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__BaseObject__c</fullName>
    <label>Base Object</label>
    <length>160</length>
    <type>Text</type>
</CustomField>