force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__ChartConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ChartConfig__c</fullName>
    <label>ChartConfig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>