force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__ColumnList__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ColumnList__c</fullName>
    <label>Column List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>