force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__Dimensions__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>