force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__ExternalViewId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ExternalViewId__c</fullName>
    <description>This field references the external MDA view (reporting space) id.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field references the external MDA view (reporting space) id.</inlineHelpText>
    <label>External View Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>