force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__GraphType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GraphType__c</fullName>
    <label>Graph Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>