force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__GroupName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GroupName__c</fullName>
    <label>Group Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>