force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__HavingClause__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HavingClause__c</fullName>
    <label>Having clause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>