force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__IsRB__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsRB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Report Builder</label>
    <type>Checkbox</type>
</CustomField>