force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__IsStandard__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>