force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__Measures__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Measures__c</fullName>
    <label>Measures</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>