force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__QueryOptions__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__QueryOptions__c</fullName>
    <label>Query Options</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>