force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__SectionId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SectionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Id</label>
    <referenceTo>JBCXM__C360Sections__c</referenceTo>
    <relationshipLabel>UI Views</relationshipLabel>
    <relationshipName>UIViewsSectionId</relationshipName>
    <type>Lookup</type>
</CustomField>