force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__ShowDefault__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ShowDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Default</label>
    <type>Checkbox</type>
</CustomField>