force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__SPType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SPType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success plan type</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>SPAttributesView</relationshipLabel>
    <relationshipName>SPAttributesView</relationshipName>
    <type>Lookup</type>
</CustomField>