force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__SystemName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SystemName__c</fullName>
    <label>System Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>