force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__UITabName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UITabName__c</fullName>
    <label>UI Tab Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>