force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__UserId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UI_Views</relationshipName>
    <type>Lookup</type>
</CustomField>