force-app/main/default/objects/JBCXM__UIViews__c/fields/JBCXM__WhereClause__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__WhereClause__c</fullName>
    <label>Where clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>